cleaned ocr-service